[package]
name = "uvt-plot"
description = "Utilities for plotting and displaying UVT data."
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
plotters = "0.3.7"
uvt = { workspace = true }
