[package]
name = "uvt-viz3d"
description = "Utilities for visualizing UVT data in 3D"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
uvt = { workspace = true, features = ["glam-support"] }
vtkio = { workspace = true }
rerun = "0.23.3"
