[package]
name = "uvt"
description = "Utilities for interacting with Uncrewed Vehicle Trajectory (UVT) files."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
quaternion-core = "0.5"
rosbag = "0.6.3"
vtkio = { workspace = true }
glam = { version = "0.28", optional = true }
tqdm = "0.7.0"
rayon = "1.10.0"
mcap = "0.23.1"
memmap2 = "0.9.5"

[features]
default = []
glam-support = ["glam"]
